--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="kv mask view-fade-out">
 
             <div class="kv-elements fade-in">
-                <img class="kv-img" src="./img/KV-Cube.png" alt="">
+                <img class="kv-img" src="./img/KV-Cube.webp" alt="">
                 <img class="star-white ani-rolling-r" src="./img/Star-White.svg" alt="">
                 <img class="star-purple ani-rolling-l" src="./img/Star-Purple.svg" alt="">
             </div>
