--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="zh-Hant-TW">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="DesignCorner 設計角落">
+    <meta property="og:url" content="https://sungwsc.github.io/DesignCorner">
+    <meta property="og:image" content="./img/thumbnail.webp">
+    <meta property="og:description" content="設計師的小角落，提供設計愛好者精選實用資源">
     <title>DesignCorner 設計角落</title>
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/animate.css">
     <link rel="stylesheet" href="./style/all.css">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    
 </head>
 
 <body class="bg-img">
